2014-02-17  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java: Make sure Error is uncaught or re-thrown.
	* ClassType.java: Likewise.

2014-02-12  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitAndThen): New method.
	(pushIfState): New private convenience method.  Use as needed.
	* IfState.java (andThenSet): New field.

2013-12-29  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitGotoIfNull, emitGotoIfNonNull): New methods.

2013-12-02  Per Bothner  <per@bothner.com>

	* CodeAttr.java (castNeeded): Force top-type to raw type.
	This is needed for TypeVariable in addition to UninitializedType.

2013-11-13  Per Bothner  <per@bothner.com>

	* ObjectType.java (getReflectClass): Simplify since we can
	now assume that Throwable#getCause is available.

2013-11-07  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java (loadClass): Fix logic error from change
	made 2008-05-10.  Fixes bug reported by Charles Turner.

2013-09-16  Per Bothner  <per@bothner.com>

	* ClassType.java (JDK_1_8_VERSION): New constant.

	* CodeAttr.java (emitNewArray): Fix logic error noted by
	Charles Turner.

2013-07-18  Per Bothner  <per@bothner.com>

	* Variable.java (freeLocal): Avoid out-of-bounds indexing of
	local_types array.  This fixes Savannah bug # 39151
	"ArrayOutOfBoundsException in Variable.freeLocal".

2013-07-11  Per Bothner  <per@bothner.com>

	* CodeAttr.java (pushAutoPoppableScope): New method.
	(popScope): Keep popping Scopes until we pop a non-autoPop Scope.
	* Scope.java (autoPop): New field.

	* Scope.java (getStartLabel, getEndLabel): New accessor methods.

	* CodeAttr.java (emitTailCall): Add overloaded method.

2013-06-28  Per Bothner  <per@bothner.com>

	* ClassType.java (writeToStream): Set ADD_ENCLOSING_DONE
	in addition to ADD_FIELDS_DONE and ADD_METHODS_DONE.

2013-06-02  Per Bothner  <per@bothner.com>

	* Type.java (isCompatibleWithValue): New method.
	(lowestCommonSuperType): Minor bullet-proofing.

2013-02-10  Per Bothner  <per@bothner.com>
