@@ -1,3 +1,8 @@
+2014-03-01  Per Bothner  <per@bothner.com>
+
+	* LambdaExp.java (compileEnd): Call CodeAttr#fixParamNames to work
+	around Android/dex limitation.
+
 2014-02-17  Per Bothner  <per@bothner.com>
 
 	* ModuleBody.java (runAsMain): Push/pop/handle ExitCalled.
