@@ -1,3 +1,7 @@
+2014-03-01  Per Bothner  <per@bothner.com>
+
+	* Scope.java (fixParamNames): New method to rename parameter names.
+
 2014-02-17  Per Bothner  <per@bothner.com>
 
 	* ArrayClassLoader.java: Make sure Error is uncaught or re-thrown.
